--- a/client/src/PageComponents/menu/menu.css
+++ b/client/src/PageComponents/menu/menu.css
@@ -10,6 +10,8 @@
     height: 60px;
     background-color:beige;
     box-shadow: 0px 1px 8px rgb(146, 146, 146); /* Shadow border under menu */
+
+    position: fixed; /*enables menu to 'float' at top of viewport (for better user experience) */
 }
 
 
