--- a/client/src/PageComponents/productCard/productCard.css
+++ b/client/src/PageComponents/productCard/productCard.css
@@ -131,7 +131,6 @@
 
     cursor: pointer;
 
-    position: relative;
 }
 
 .add-button { /* button style(s) when active */
